overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitartortona-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        environment: production
    spec:
      containers:
        - name: app
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
