overlays/production/deployment-version-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitartortona-api
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: v1.2.0
